Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-24011

InnoDB: Failing assertion: index_cache->words == NULL in fts0fts.cc line 551

    XMLWordPrintable

Details

    Description

      Assert hit during RQG testing
      [rr 206526 1387520]2020-10-22 07:21:06 0x640000225700[rr 206526 1387523]  InnoDB: Assertion failure in file /home/mleich/Server/bb-10.2-MDEV-23693/storage/innobase/fts/fts0fts.cc line 551
      [rr 206526 1387525]InnoDB: Failing assertion: index_cache->words == NULL
       
      (rr) bt
      #0  __GI_raise (sig=sig@entry=6) at ../sysdeps/unix/sysv/linux/raise.c:50
      #1  0x000023c358907859 in __GI_abort () at abort.c:79
      #2  0x0000559c5a27ccee in ut_dbg_assertion_failed (expr=expr@entry=0x559c5b1f8040 "index_cache->words == NULL", file=file@entry=0x559c5b1f7ae0 "/home/mleich/Server/bb-10.2-MDEV-23693/storage/innobase/fts/fts0fts.cc", line=line@entry=551)
          at /home/mleich/Server/bb-10.2-MDEV-23693/storage/innobase/ut/ut0dbg.cc:60
      #3  0x0000559c5a5caec9 in fts_index_cache_init (allocator=0x61a000033a00, index_cache=0x623000011dc0) at /home/mleich/Server/bb-10.2-MDEV-23693/storage/innobase/fts/fts0fts.cc:551
      #4  0x0000559c5a5edd27 in fts_cache_init (cache=cache@entry=0x61a000033708) at /home/mleich/Server/bb-10.2-MDEV-23693/storage/innobase/fts/fts0fts.cc:578
      #5  0x0000559c5a5efaec in fts_sync_commit (sync=sync@entry=0x61a000033a28) at /home/mleich/Server/bb-10.2-MDEV-23693/storage/innobase/fts/fts0fts.cc:4195
      #6  0x0000559c5a5f0e9a in fts_sync (sync=0x61a000033a28, unlock_cache=<optimized out>, wait=wait@entry=false) at /home/mleich/Server/bb-10.2-MDEV-23693/storage/innobase/fts/fts0fts.cc:4371
      #7  0x0000559c5a5f12e9 in fts_sync_table (table=table@entry=0x618000030d08, wait=wait@entry=false) at /home/mleich/Server/bb-10.2-MDEV-23693/storage/innobase/fts/fts0fts.cc:4417
      #8  0x0000559c5a6024bc in fts_optimize_sync_table (table=0x618000030d08) at /home/mleich/Server/bb-10.2-MDEV-23693/storage/innobase/fts/fts0opt.cc:2773
      #9  0x0000559c5a616431 in fts_optimize_thread (arg=0x60c00003aa80) at /home/mleich/Server/bb-10.2-MDEV-23693/storage/innobase/fts/fts0opt.cc:2872
      #10 0x000078fc46a47609 in start_thread (arg=<optimized out>) at pthread_create.c:477
      #11 0x000023c358a04103 in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:95
      (rr)
       
      origin/bb-10.2-MDEV-23693 8205065535e46a001884379cdf2ca4e48ed91bbf 2020-10-21T21:33:49+05:30 compiled with debug+ASAN+Og
       
      RQG
      ===
      git clone https://github.com/mleich1/rqg --branch experimental RQG
       
      perl rqg.pl \
      --gendata=conf/engines/innodb/full_text_search.zz \
      --short_column_names \
      --grammar=conf/engines/innodb/full_text_search.yy \
      --redefine=conf/mariadb/alter_table.yy \
      --redefine=conf/mariadb/instant_add.yy \
      --redefine=conf/mariadb/modules/alter_table_columns.yy \
      --redefine=conf/mariadb/sp.yy \
      --redefine=conf/mariadb/bulk_insert.yy \
      --redefine=conf/mariadb/modules/foreign_keys.yy \
      --redefine=conf/mariadb/modules/locks.yy \
      --redefine=conf/mariadb/modules/sql_mode.yy \
      --redefine=conf/mariadb/redefine_temporary_tables.yy \
      --redefine=conf/mariadb/versioning.yy \
      --redefine=conf/mariadb/sequences.yy \
      --mysqld=--innodb_use_native_aio=1 \
      --mysqld=--innodb_lock_schedule_algorithm=fcfs \
      --mysqld=--loose-idle_write_transaction_timeout=0 \
      --mysqld=--loose-idle_transaction_timeout=0 \
      --mysqld=--loose-idle_readonly_transaction_timeout=0 \
      --mysqld=--connect_timeout=60 \
      --mysqld=--interactive_timeout=28800 \
      --mysqld=--slave_net_timeout=60 \
      --mysqld=--net_read_timeout=30 \
      --mysqld=--net_write_timeout=60 \
      --mysqld=--loose-table_lock_wait_timeout=50 \
      --mysqld=--wait_timeout=28800 \
      --mysqld=--lock-wait-timeout=86400 \
      --mysqld=--innodb-lock-wait-timeout=50 \
      --no-mask \
      --queries=10000000 \
      --seed=random \
      --reporters=Backtrace \
      --reporters=ErrorLog \
      --reporters=Deadlock1 \
      --validators=None \
      --mysqld=--log_output=none \
      --mysqld=--log-bin \
      --mysqld=--log_bin_trust_function_creators=1 \
      --mysqld=--loose-debug_assert_on_not_freed_memory=0 \
      --engine=InnoDB \
      --restart_timeout=120 \
      --duration=400 \
      --mysqld=--loose-innodb_fatal_semaphore_wait_threshold=400 \
      --mysqld=--innodb_stats_persistent=on \
      --mysqld=--loose-max-statement-time=30 \
      --threads=33 \
      --mysqld=--innodb_page_size=32K \
      --mysqld=--innodb-buffer-pool-size=24M \
      --duration=400 \
      --no_mask \
      --workdir=<local settings> \
      --vardir=<local settings> \
      --mtr-build-thread=<local settings> \
      --basedir1=<local settings> \
      --script_debug=_nix_ \
      --rr=Extended \
      --rr_options=--chaos
      
      

      Attachments

        1. TBR-201.zz
          1 kB
          Matthias Leich
        2. simp_TBR-201.cfg
          43 kB
          Matthias Leich
        3. TBR-201_micro.yy
          0.2 kB
          Matthias Leich

        Activity

          People

            thiru Thirunarayanan Balathandayuthapani
            mleich Matthias Leich
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: