MDEV-24011 InnoDB: Failing assertion: index_cache->words == NULL in fts0fts.cc line 551

- This issue is caused by race condition between DDL
and fts_optimize_thread. InnoDB DDL adds new index to the
fts cache when fts optimize thread reinitialize the cache.
InnoDB should take init lock before reinitializing the
fts cache.